fixed horizontal positioning on firefox/safari; fixed offset for game page section titles. TODO: fix ratio of game media

--- a/style.scss
+++ b/style.scss
@@ -90,6 +90,7 @@ body{
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	overflow-x:hidden;
 }
 
 a {
@@ -341,7 +342,7 @@ h3{
 
 .psIndex{
 	position:absolute;
-	background:url('skybg1_mobile.gif') bottom center no-repeat fixed;
+	background:url('skybg1_mobile2.gif') bottom center no-repeat fixed;
 	background-size: cover;
 	width:100%;
 	height:100%;
@@ -470,15 +471,12 @@ h3{
 		position:relative;
 		display:inline-block;
 		width:100%;
-		max-width:480px;
-		min-height:150px;
+		max-width:320px;
+		min-height:180px;
 		margin:auto;
 		margin-top:1em;
 		background-image: url('meeples_temp.jpg');
 		background-size:cover;
-		@media only screen and (max-width:768px) and (orientation:landscape){
-			min-height:150px;
-		}
 	}
 
 	.gameSplashMediaAside{	
@@ -493,9 +491,6 @@ h3{
 			h3{
 				text-align:center;
 				font-size:.75em;
-				@media only screen and (max-width:768px) and (orientation:landscape){
-					font-size:1em;
-				}
 			}
 		}
 
@@ -516,7 +511,7 @@ h3{
 			top:35%;
 			right:50%;
 			width:calc(50% - 2.5em);
-			min-height:180px;
+			min-height:calc(100% - 2.5em);
 			margin:auto 1em auto auto;
 			background-image: url('meeples_temp.jpg');
 			background-size:cover;
@@ -937,7 +932,7 @@ input, button, textarea{
 	}
 
 	.psIndex{
-		background:url('skybg1_desktop2.gif') center bottom;
+		background:url('skybg1_desktop2.gif') center bottom -40px;
 		background-size: cover;
 		background-repeat: no-repeat;
 		z-index:11;
@@ -960,15 +955,16 @@ input, button, textarea{
 		border:none;
 		// box-shadow: 0 -2px 3px 1px rgba(0,0,0,.5), 0 2px 3px 1px rgba(0,0,0,.5);
 
-		article{
-			padding: 0 0 2em 0;
-		}
+		// article{
+		// 	padding: 0 0 2em 0;
+		// }
 
-		aside{
-			padding: 1em 0;
-		}
+		// aside{
+		// 	padding: 1em 0;
+		// }
 
 		article{
+			padding:inherit;
 			margin:0;
 			border-radius:0;
 			overflow:hidden;
@@ -1009,7 +1005,6 @@ input, button, textarea{
 			.gameSplashMedia{
 				position: absolute;
 				right:50%;
-				// display:inline;
 				width:calc(50% - 2.5em);
 				max-width:640px;
 				min-height:360px;
@@ -1049,16 +1044,30 @@ input, button, textarea{
 	.gameCards{
 
 		.gamePicturesCard{
+			.pictureWrapper{
+				max-width:calc(100% - 4em);
+				display:inline-block;
+				position:relative;
+				&:after {
+					padding-top: 56.25%;
+					display:block;
+					content: '';
+				}
+			}
+
 			.pictureSlider{
-				max-width:720px;
+				
+				// max-height:720px;
+				// max-width:720px;
 				min-width:480px;
-				min-height:480px;
+				// min-height:320px;
 
 				.pictureSliderArrow{
 					width: 60px;
 					font-size:4em;
 				}
 			}
+
 		}
 
 		.gamePlayCard{
